--- a/FlashcardAppAndroid/gradle/libs.versions.toml
+++ b/FlashcardAppAndroid/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 accompanistSwiperefresh = "0.33.2-alpha"
 agp = "8.9.0"
+coilCompose = "2.2.2"
 converterGson = "2.9.0"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
@@ -22,6 +23,7 @@ accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiper
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
