--- a/FlashcardAppAndroid/gradle/libs.versions.toml
+++ b/FlashcardAppAndroid/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanistSwiperefresh = "0.33.2-alpha"
 agp = "8.9.0"
 coilCompose = "2.2.2"
 converterGson = "2.9.0"
+foundation = "1.8.3"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -21,6 +22,7 @@ animationCoreLint = "1.8.3"
 [libraries]
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
