--- a/FlashcardAppAndroid/gradle/libs.versions.toml
+++ b/FlashcardAppAndroid/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 accompanistSwiperefresh = "0.33.2-alpha"
+activityComposeVersion = "1.7.2"
 agp = "8.9.0"
 coilCompose = "2.2.2"
 converterGson = "2.9.0"
@@ -21,6 +22,7 @@ animationCoreLint = "1.8.3"
 
 [libraries]
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+androidx-activity-compose-v172 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
